@@ -1,3 +1,8 @@
+2020-XX-XX   1.5.3:
+-------------------
+  * add optional index parameter to `.index()` to invert single bit
+
+
 2020-08-16   1.5.2:
 -------------------
   * add PyType_Ready usage, issue #66
